--- a/PackageEasy/PackageEasy/Views/AssemblyView.xaml
+++ b/PackageEasy/PackageEasy/Views/AssemblyView.xaml
@@ -376,7 +376,17 @@
                             <Separator Style="{StaticResource sep}"/>
                             <MenuItem  Style="{StaticResource menuContextStyle}" d:Header="忽略" Command="{Binding SetMenuCommand}" CommandParameter="{x:Static enmus:FileMenuOperateType.Ignore}"  Header="{DynamicResource AssemblIgnore}"  ></MenuItem>
                             <MenuItem  IsEnabled="{Binding IsDir}" Style="{StaticResource menuContextStyle}" d:Header="忽略当前文件夹" Command="{Binding SetMenuCommand}" CommandParameter="{x:Static enmus:FileMenuOperateType.IgnoreDir}"  Header="{DynamicResource AssemblIgnoreDirectory}"  ></MenuItem>
-
+                            <MenuItem   Style="{StaticResource menuContextStyle}" ItemsSource="{Binding FormatList}" d:Header="忽略当前文件格式" Command="{Binding SetMenuCommand}" CommandParameter="{x:Static enmus:FileMenuOperateType.IgnoreFormat}"  Header="{DynamicResource AssemblyIgnoreFileExtension}"  >
+                                <MenuItem.ItemContainerStyle>
+                                    <Style TargetType="MenuItem">
+                                        <Setter Property="Header" Value="{Binding ExtensionName}"/>
+                                        <Setter Property="Command" Value="{Binding MenuCommand}"/>
+                                        <Setter Property="CommandParameter" Value="{Binding ExtensionName}"/>
+                                    </Style>
+                                </MenuItem.ItemContainerStyle>
+                            </MenuItem>
+                            <Separator Style="{StaticResource sep}"/>
+                            <MenuItem  Style="{StaticResource menuContextStyle}" d:Header="刷新" Command="{Binding SetMenuCommand}" CommandParameter="{x:Static enmus:FileMenuOperateType.Refresh}"  Header="{DynamicResource AssemblyRefresh}"  ></MenuItem>
                         </ContextMenu>
                     </DataGrid.ContextMenu>
                 </DataGrid>
